--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -1,27 +1,37 @@
 plugins {
+    // Компиляция Java кода
     id 'java'
+
+    // компиляция spring-boot
     id 'org.springframework.boot' version '3.0.2'
+
+    // Управляет зависимостями
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.aleonov.micro.demo'
 version = '0.0.1-SNAPSHOT'
+// Целевая версия кода (не ниже указанной версии)
 sourceCompatibility = '17'
 
+// Тут подключаем нужные репозитории
 repositories {
     mavenCentral()
     maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
 }
 
 ext {
+    // Устанавливаем переменную springCloudVersion в значение 2022.0.0
     set('springCloudVersion', "2022.0.0")
 }
 
+// Подключаемы зависимости
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+// dependencyManagement для Spring Cloud
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
