Eureka client example

--- a/eureka-server/src/main/resources/eureka.yml
+++ b/eureka-server/src/main/resources/eureka.yml
@@ -1,4 +1,6 @@
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     # Т.к это не клиент отключаем не нужное - это все включается только для клиентов
     register-with-eureka: false
