ApiGateway configure out

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.application.name=api-gateway
+server.port=8082
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+# it is needed for the auto-mapping by template /SERVICE-NAME/route
+spring.cloud.gateway.discovery.locator.enabled=true
