ApiGateway use lower case of service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8082
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 # it is needed for the auto-mapping by template /SERVICE-NAME/route
 spring.cloud.gateway.discovery.locator.enabled=true
+# for using lower case /service-name/route
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
