Multiple instance of Product service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-server.port=9001
+server.port=0
 spring.application.name=product-service
 spring.config.import=eureka.yml
+# Multiple instance
+eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
